Avoid flickering welcome banner
Make the welcome banner default to being hidden and then show
it (by adding a class) if there is no cookie.

Fixes #1951

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -611,9 +611,16 @@ body.compact {
     height: auto;
     overflow: hidden;
 
-    #banner,
-    .welcome {
+    #banner {
       display: block;
+    }
+
+    .welcome {
+      display: none;
+
+      &.visible {
+        display: block;
+      }
     }
 
     #sidebar_content {
